Adicionando a pg de bem-vindo

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,10 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pedro Augusto</title>
+    <title>Início</title>
 </head>
 <body>
-    <h1>Pedro</h1>
-    <h2>Augusto</h2>
+    <h1>Me conta um pouco sobre você!</h1>
+    <form action="/" method="POST">
+        <label for="nome">Seu nome:</label>
+        <input type="text" name="nome" required>
+        <label for="idade">Sua idade:</label>
+        <input type="number" name="idade" required>
+    </form>
 </body>
 </html>
