Adicionando o inicio do conteudo do bemvindo

--- a/views/bemvindo.ejs
+++ b/views/bemvindo.ejs
@@ -6,6 +6,7 @@
     <title>Bem-Vindo</title>
 </head>
 <body>
-    
+    <h1>Olá <%= nome %>!</h1>
+    <h2>Vou te apresentar algumas coisas que eu gosto</h2>
 </body>
 </html>
