--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,7 @@
         <input type="text" name="nome" required>
         <label for="idade">Sua idade:</label>
         <input type="number" name="idade" required>
+        <input type="submit" value="Enviar">
     </form>
 </body>
 </html>
