--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Início</title>
-</head>
-<body>
+<%- include('base'); -%>
     <h1>Me conta um pouco sobre você!</h1>
     <form action="/" method="POST">
         <label for="nome">Seu nome:</label>
