Adicionando a página final

--- a/views/bemvindo.ejs
+++ b/views/bemvindo.ejs
@@ -12,5 +12,8 @@
     <h2>Projeto do meu amigo</h3>
     <h3><a href="https://rafael-nunes-silva.github.io/WebGL-Learning/" target="_blank">Link do projeto</a></h2>
     <iframe src="https://rafael-nunes-silva.github.io/WebGL-Learning/particleSim.html" frameborder="0"></iframe>
+    <form action="final" method="post">
+        <input type="submit" value="Ir ao final">
+    </form>
 </body>
 </html>
